--- a/ToDoListProject/app/src/main/res/layout/activity_main.xml
+++ b/ToDoListProject/app/src/main/res/layout/activity_main.xml
@@ -14,12 +14,43 @@
         android:orientation="vertical">
 
     <TextView
+        android:id="@+id/taskName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tarefa!"
         style="@style/TextAppearance.AppCompat.Title"
+        android:layout_margin="20dp"
+        android:layout_gravity="center"
         />
+
+        <TextView
+            android:id="@+id/taskDesc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Descrição da tarefa!"
+            style="@style/TextAppearance.AppCompat.Title"
+            android:layout_margin="20dp"
+            android:layout_gravity="center"
+            />
+
+
     </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nova Tarefa"
+        android:id="@+id/newTaskButton"
+        android:backgroundTint="?attr/colorPrimary"
+        android:textColor="?colorOnPrimary"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:padding="5dp"
+        android:layout_margin="20dp"
+        app:icon="@drawable/baseline_add_24"
+        app:iconTint="?colorOnPrimary"
+        />
+"
 
 
 </RelativeLayout>
